# Conways-Game-of-Life

./: Cargo.toml  LICENSE  README.md
rust-module/: Cargo.toml  conways_game_of_life.wasm
rust-module/pkg/: conways_game_of_life.d.ts  conways_game_of_life.js  conways_game_of_life_bg.wasm  package.json  readme.md
rust-module/src/: _lib.rs  lib.rs  main.rs
src/: main.rs
wasm-test/: .gitignore  conways_game_of_life.js  conways_game_of_life_bg.wasm  index.js  package-lock.json  package.json  webpack.config.js
web-module/: .eslintrc.js  .firebaserc  index.html  index.js  package-lock.json  package.json  tslint.json  webpack.config.js  worker.js
web-module/src/: App.tsx  config.js  index.js  registerServiceWorker.ts
web-module/src/components/: CellButton.css  CellButton.tsx  Map.tsx  SideForm.tsx
web-module/src/states/: Boot.js  Game.js
