[package]
name = "conways_game_of_life"
version = "0.1.0"
description = "Conway's Game of Life for WASM"
authors = ["Gabriel Carneiro <gabriel.carneiro97@live.com>"]
license = "MIT"
repository = "https://github.com/gabrielcarneiro97/Conways-Game-of-Life"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.4.2"
bit-vec = "0.5.0"